# avr-window

./: Cargo.toml  Dockerfile.ci  README.md  animation.FCStd1  atmega128rfa1.json  avr-atmega128rfa1.json  demo.html  index.html  package.json
.cargo/: config.toml
.github/workflows/: docker-image.yml  pages.yml
Bobbin/: bobbin.FCStd  bobbin.FCStd1  bobbin.stl
Gear/: Gear.FCStd  Gear.FCStd1
Rack/: Rack.FCStd  Rack.FCStd1
animation/: animation.FCStd1
cylinder/: cylinder.FCStd  cylinder.FCStd1  cylinder.stl
cylinder_v2/: cylinder_v2-cylinder.stl  cylinder_v2.FCStd  cylinder_v2.FCStd1
definitions/: Cargo.toml
definitions/src/: atmega128rfa1.rs  lib.rs
frameFixation/: frameFixation-Body.stl  frameFixation.FCStd  frameFixation.FCStd1  frameFixation.stl
frame_fixation_short/: frameFixationShort.FCStd
gear_v2/: gear_v2-Gear.stl  gear_v2.FCStd  gear_v2.FCStd1
modeling/: .gitignore
modeling/Bobbin/: bobbin.FCStd
modeling/animation/: animation.FCStd  animgraph.pygraph
modeling/cylinder_v2/: cylinder_v2.FCStd
modeling/rack_v2/: rack_v2.FCStd
modeling/rack_v3/: rack_v3.FCStd
modeling/window_fixation/: window_fixation.FCStd
modeling/window_fixation_v2/: window_fixation.FCStd
rack_v2/: rack_v2.FCStd  rack_v2.FCStd1
rack_v3/: rack_v3.FCStd
src/: main.rs
window_fixation/: window_fixation-Body.stl  window_fixation.FCStd1
window_fixation_test/: window_fixation_test-Body.stl  window_fixation_test.FCStd  window_fixation_test.FCStd1
window_fixation_v2/: window_fixation-Body.stl  window_fixation.FCStd  window_fixation.FCStd1
window_module/: window_module.FCStd  window_module.FCStd1
